--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,17 @@
             <artifactId>derbytools</artifactId>
             <version>10.16.1.1</version>
         </dependency>
+         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <version>2.8.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
