--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>derbytools</artifactId>
             <version>10.16.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derby</artifactId>
+            <version>10.17.1.0</version>
+            <scope>runtime</scope>
+        </dependency>
          <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
